[tool.poetry]
name = "test_runner"
version = "0.1.0"
description = "this is a test runner"
authors = ["ahmedhanafy725 <ahmed.hanafy725@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xmltodict = "^0.13.0"
colorlog = "^6.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
